--- a/about/about+.css
+++ b/about/about+.css
@@ -1,14 +1,12 @@
-body{margin: 0;font-weight: bold;font-family: 'Montserrat', sans-serif;font-weight: 200; color: rgb(67, 61, 61) }
+body{margin: 0;font-weight: bold;font-family: 'Montserrat', sans-serif;font-weight: 200; color: rgb(67, 61, 61) ;}
 a{text-decoration-line: none;color: rgb(43, 44, 44);}
 p{margin:0;}
 h3{margin:0;}
-
 .wrapper{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-
 main{
     height: fit-content;
 }
@@ -21,17 +19,14 @@ main{
     width: 100%;
     height: 30px;
 }
-
 nav{
     display: flex;
     flex-direction: row;
     border-bottom: solid 1px;
     border-color: rgb(131, 135, 135);
     justify-content: space-around;
-    align-items: center;
-    
+    align-items: center;   
 }
-
 .navbar{
     display: flex;
     flex-direction: row;
@@ -211,6 +206,43 @@ nav{
 .socials {
     padding: 0 0 40px 0;
     width: 85%;
+}
+#menu {
+    display: none;
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    z-index: 3;
+    width: fit-content;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: fit-content;
+    background-color: white;
+    padding-top: 30px;
+    padding-bottom:20px;
+    border: solid 2px;
+    border-color: black;
+    border-radius: 7px;
+    transition: 0.4s ease-in;
+}
+#menu a {
+    display: block;
+    text-decoration: none;
+    color: #333;
+}
+.menu_item{
+    margin-left: 20px;
+    margin-top:10px;
+    margin-bottom: 15px;
+    font-size: 1em;
+    width: 200px;
+    border-radius: 3px;
+}
+.menu_item:hover{
+    color: aquamarine;
+}
+#menu.show {
+   display: block;
+   transition: 0.4s ease-in;
 }
 @media screen and (max-width:768px) {
     .slideshow-container{
